views/main.scss
/* ... */
#contact_internal {
  font-family: "Open Sans";
  margin-bottom: 30px;
  div.header {
    padding-top: $header_margin;
    padding-bottom: $header_margin;
    text-align: center;
    background: url(/parallax4.jpg);
    background-repeat: no-repeat;
    background-position: center 0px;
    background-attachment: fixed;
    background-size: cover;
    h1.header {
      margin: 0 auto;
      color: #fff;
      font-size: 3.125em;
    }
  }
  div.content {
    .subtitle {
      text-align: center;
      margin: 0 auto;
      width: 90%;
      h1 {
        margin: 0 auto;
        padding-top: 30px;
        color: #292929;
        font-family: "Open Sans";
        font-size: 1.56em;
        font-weight: 300;
      }
    }
    .form {
      margin: 0 auto;
      margin-top: 1.4em;
      max-width: 30em;
      width: 90%;
      form {
        ul {
          width: 100%;
          list-style: none;
          margin: 0 auto;
          padding: 0;
          #send-error {
            margin: 20px 0;
            padding: 20px;
            border-left: 3px solid #eee;
            background-color: #fdf7f7;
            border-color: #eed3d7;
            display: none;
          }
          #submit_message {
            -webkit-transition: all 0.5s ease;
            -moz-transition: all 0.5s ease;
            -o-transition: all 0.5s ease;
            transition: all 0.5s ease;
          }
          li {
            margin: 0 auto;
            margin-bottom: .8em;
            input, textarea {
              -webkit-appearance: none;
              font-family: "Open Sans";
              font-weight: 400;
              width: 100%;
              border: 1px solid #ccc;
              border-radius: 2px;
              -webkit-box-sizing: border-box; 
              -moz-box-sizing: border-box;   
              box-sizing: border-box;
              padding: 6px;
              &:focus {
                outline: none;
                border: 1px solid #69A6FF;
              }
            }
            button.submit {
              font-family: "Open Sans";
              font-weight: 300;
              border: none;
              outline: none;
              width: 100%;
              background-color: #0078e7;
              color: #fff;
              padding: .5em 1.5em;
              text-decoration: none;
              border-radius: 2px;
              -webkit-transition: .1s linear -webkit-box-shadow;
              -moz-transition: .1s linear -moz-box-shadow;
              -ms-transition: .1s linear box-shadow;
              -o-transition: .1s linear box-shadow;
              transition: .1s linear box-shadow;
              display: inline-block;
              zoom: 1;
              line-height: normal;
              white-space: nowrap;
              vertical-align: baseline;
              text-align: center;
              cursor: pointer;
              -webkit-user-drag: none;
              -webkit-user-select: none;
              &:hover {
                filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#1a000000', GradientType=0);
                background-image: -webkit-gradient(linear,0 0,0 100%,from(transparent),color-stop(40%,rgba(0,0,0,.05)),to(rgba(0,0,0,.1)));
                background-image: -webkit-linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
                background-image: -moz-linear-gradient(top,rgba(0,0,0,.05) 0,rgba(0,0,0,.1));
                background-image: -ms-linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
                background-image: -o-linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
                background-image: linear-gradient(transparent,rgba(0,0,0,.05) 40%,rgba(0,0,0,.1));
              }
            }
            textarea {
              resize: vertical;
              max-height: 20em;
            }
            input {
              height: 2em;
            }
          }
        }
      }
    }
    .icons {
      margin: 0 auto;
      margin-top: 1.4em;
      max-width: 30em;
      text-align: center;
      width: 90%;
      @media screen and (max-width: 34.37em) {
        a > img {
          width: 4em !important;
          height: 4em !important;
          margin-left: .6em !important;
          margin-right: .6em !important;
        }
      }
      a {
        border: none;
        img {
          margin-left: 1em;
          margin-right: 1em;
          width: 7em;
          height: 7em;
          -webkit-transition: .25s;
          -moz-transition: .25s;
          -ms-transition: .25s;
          -o-transition: .25s;
          transition: .25s;
          .no-touch &:hover {
            opacity: .7;
          }
        }
      }
    }
  }
}

#about-site {
  font-family: "Open Sans";
  font-weight: 300;
  div.header {
    padding-top: $header_margin;
    padding-bottom: $header_margin;
    text-align: center;
    background: url(/parallax3.jpg);
    background-repeat: no-repeat;
    background-position: center 0px;
    background-attachment: fixed;
    background-size: cover;
    h1.header {
      margin: 0 auto;
      color: #fff;
      font-size: 3.125em;
    }
  }
  div.wrapper {
    max-width: $maxwidth;
    width: 90%;
    margin: 0 auto;
    margin-top: 30px;
    div.text {
      font-size: 1em;
      color: #292929;
      // width: 60%;
    }
    .humanstxt {
      text-align: center;
      margin-top: 1.4em;
      a {
        border: none;
        img {
          width: 15em;
          -webkit-transition: .25s;
          -moz-transition: .25s;
          -ms-transition: .25s;
          -o-transition: .25s;
          transition: .25s;
          .no-touch &:hover {
            opacity: .7;
          }
        }
      }
    }
  }
}

div.highlight {
  padding: 16px;
  background-color: #f9f9f9;
  border-top: 4px solid #eaeaea;
  line-height: 10px;
  margin-bottom: 16px;
  font-size: 12px;
}
/* ... */

